--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="testCont">
-		<svg id="canvas"></svg>
+		<svg id="pt-canvas"></svg>
 	</div>
 	<script src="jquery.js"></script>
 	<script src="snap.js"></script>
